// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkedInBadge component Should render the LinkedInBadge component 1`] = `
<DocumentFragment>
  <div
    class="linkedin-badge bubbles"
  >
    <div
      class="linkedin-badge__content"
    >
      <img
        alt="Atanas Atanasov smiling dressed in a green t-shirt"
        data-nimg="1"
        decoding="async"
        height="240"
        loading="lazy"
        src="/_next/image?url=%2Fimages%2Ftemp%2Fatanas.jpg&w=640&q=75"
        srcset="/_next/image?url=%2Fimages%2Ftemp%2Fatanas.jpg&w=256&q=75 1x, /_next/image?url=%2Fimages%2Ftemp%2Fatanas.jpg&w=640&q=75 2x"
        style="color: transparent;"
        width="240"
      />
      <h4>
        <a
          href="https://linkedin.com/in/scriptex"
          rel="noopener noreferrer"
          target="_blank"
        >
          👨💻 Atanas Atanasov
          <svg
            class="c-svg-external-link"
          >
            <use
              xlink:href="#svg-external-link"
            />
          </svg>
        </a>
      </h4>
      <h5>
        Lead Front-end Engineer / E.ON Home Project @E.ON
      </h5>
      <h5>
        <a
          href="https://www.linkedin.com/company/e-on"
          rel="noopener noreferrer"
          target="_blank"
        >
          E.ON
          <svg
            class="c-svg-external-link"
          >
            <use
              xlink:href="#svg-external-link"
            />
          </svg>
        </a>
         |
        <a
          href="https://www.linkedin.com/school/university-of-economics-varna"
          rel="noopener noreferrer"
          target="_blank"
        >
          University of Economics - Varna
          <svg
            class="c-svg-external-link"
          >
            <use
              xlink:href="#svg-external-link"
            />
          </svg>
        </a>
      </h5>
      <a
        class="c-btn c-btn--small"
        href="https://linkedin.com/in/scriptex"
        rel="noopener noreferrer"
        target="_blank"
      >
        View profile
        <svg
          class="c-svg-external-link"
        >
          <use
            xlink:href="#svg-external-link"
          />
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkedInBadge component Should unmount the LinkedInBadge component 1`] = `<DocumentFragment />`;

exports[`SocialMusic component Should render the SocialMusic component 1`] = `
<DocumentFragment>
  <header
    class="c-section__header"
  >
    <h2>
      <a
        href="https://www.last.fm/user/scriptex"
        rel="noopener noreferrer"
        target="_blank"
      >
        Last.FM
        <svg
          class="c-svg-external-link"
        >
          <use
            xlink:href="#svg-external-link"
          />
        </svg>
      </a>
       statistics
      <small>
        Updated at Mock date
      </small>
    </h2>
  </header>
  <div
    class="c-section--stats"
  >
    <div
      class="c-section__entry c-section__entry--no-background"
    >
      <div
        class="o-shell"
      >
        <ul
          class="c-section__list"
        >
          <li>
            <span>
              Last.FM username:
            </span>
            <strong>
              scriptex
            </strong>
          </li>
          <li>
            <span>
              Total albums:
            </span>
            <strong>
              1000
            </strong>
          </li>
          <li>
            <span>
              Total artists:
            </span>
            <strong>
              1234
            </strong>
          </li>
          <li>
            <span>
              Total plays:
            </span>
            <strong>
              12345
            </strong>
          </li>
          <li>
            <span>
              Total tracks:
            </span>
            <strong>
              100
            </strong>
          </li>
          <li>
            <span>
              Listening since:
            </span>
            <strong>
              Mock date
            </strong>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="c-section__entry"
  >
    <div
      class="o-shell"
    >
      <div
        class="o-grid"
      >
        <div
          class="o-grid__item xs-12"
        >
          <h3>
            Top albums for last week:
          </h3>
          <div
            class="carousel"
          >
            <div
              class="carousel__container"
              style="transform: translateZ(857390066042756900px) rotateY(0deg);"
            >
              <div
                class="carousel__slide"
                style="opacity: 1; transform: rotateY(0deg) translateZ(-857390066042756900px);"
              >
                <img
                  alt="Test weekly album"
                  src="https://lastfm.freetls.fastly.net/i/u/174s/ade81b221def43c48ba7b364058c13c2.png"
                />
                <div
                  class="carousel__slide-overlay"
                >
                  <strong>
                    Test weekly album
                  </strong>
                  <span>
                    Test Artist
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="carousel__controls"
          >
            <button
              class="carousel__control carousel__control--prev"
            >
              Previous
            </button>
            <button
              class="carousel__control carousel__control--next"
            >
              Next
            </button>
          </div>
        </div>
        <div
          class="o-grid__item xs-12"
        >
          <h3>
            Top albums for last month:
          </h3>
          <div
            class="carousel"
          >
            <div
              class="carousel__container"
              style="transform: translateZ(857390066042756900px) rotateY(0deg);"
            >
              <div
                class="carousel__slide"
                style="opacity: 1; transform: rotateY(0deg) translateZ(-857390066042756900px);"
              >
                <img
                  alt="Test top album"
                  src="https://lastfm.freetls.fastly.net/i/u/174s/2b20f07b88e2de001eeb4ea110d6a061.png"
                />
                <div
                  class="carousel__slide-overlay"
                >
                  <strong>
                    Test top album
                  </strong>
                  <span>
                    Test Artist
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="carousel__controls"
          >
            <button
              class="carousel__control carousel__control--prev"
            >
              Previous
            </button>
            <button
              class="carousel__control carousel__control--next"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SocialMusic component Should render the SocialMusic component 2`] = `
<DocumentFragment>
  <header
    class="c-section__header"
  >
    <h2>
      <a
        href="https://www.last.fm/user/scriptex"
        rel="noopener noreferrer"
        target="_blank"
      >
        Last.FM
        <svg
          class="c-svg-external-link"
        >
          <use
            xlink:href="#svg-external-link"
          />
        </svg>
      </a>
       statistics
      <small>
        Updated at Mock date
      </small>
    </h2>
  </header>
  <div
    class="c-section--stats"
  >
    <div
      class="c-section__entry c-section__entry--no-background"
    >
      <div
        class="o-shell"
      >
        <ul
          class="c-section__list"
        >
          <li>
            <span>
              Last.FM username:
            </span>
            <strong>
              scriptex
            </strong>
          </li>
          <li>
            <span>
              Total albums:
            </span>
            <strong>
              1000
            </strong>
          </li>
          <li>
            <span>
              Total artists:
            </span>
            <strong>
              1234
            </strong>
          </li>
          <li>
            <span>
              Total plays:
            </span>
            <strong>
              12345
            </strong>
          </li>
          <li>
            <span>
              Total tracks:
            </span>
            <strong>
              100
            </strong>
          </li>
          <li>
            <span>
              Listening since:
            </span>
            <strong>
              Mock date
            </strong>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="c-section__entry"
  >
    <div
      class="o-shell"
    >
      <div
        class="o-grid"
      >
        <div
          class="o-grid__item xs-12"
        >
          <h3>
            Top albums for last week:
          </h3>
          <div
            class="carousel"
          >
            <div
              class="carousel__container"
              style="transform: translateZ(857390066042756900px) rotateY(0deg);"
            >
              <div
                class="carousel__slide"
                style="opacity: 1; transform: rotateY(0deg) translateZ(-857390066042756900px);"
              >
                <img
                  alt="Test weekly album"
                  src="https://lastfm.freetls.fastly.net/i/u/174s/ade81b221def43c48ba7b364058c13c2.png"
                />
                <div
                  class="carousel__slide-overlay"
                >
                  <strong>
                    Test weekly album
                  </strong>
                  <span>
                    Test Artist
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="carousel__controls"
          >
            <button
              class="carousel__control carousel__control--prev"
            >
              Previous
            </button>
            <button
              class="carousel__control carousel__control--next"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SocialMusic component Should render the SocialMusic component 3`] = `<DocumentFragment />`;

exports[`SocialMusic component Should render the SocialMusic component 4`] = `
<DocumentFragment>
  <header
    class="c-section__header"
  >
    <h2>
      <a
        href="https://www.last.fm/user/scriptex"
        rel="noopener noreferrer"
        target="_blank"
      >
        Last.FM
        <svg
          class="c-svg-external-link"
        >
          <use
            xlink:href="#svg-external-link"
          />
        </svg>
      </a>
       statistics
      <small>
        Updated at Mock date
      </small>
    </h2>
  </header>
  <div
    class="c-section--stats"
  >
    <div
      class="c-section__entry c-section__entry--no-background"
    >
      <div
        class="o-shell"
      >
        <ul
          class="c-section__list"
        >
          <li>
            <span>
              Last.FM username:
            </span>
            <strong>
              scriptex
            </strong>
          </li>
          <li>
            <span>
              Total albums:
            </span>
            <strong>
              1000
            </strong>
          </li>
          <li>
            <span>
              Total artists:
            </span>
            <strong>
              1234
            </strong>
          </li>
          <li>
            <span>
              Total plays:
            </span>
            <strong>
              12345
            </strong>
          </li>
          <li>
            <span>
              Total tracks:
            </span>
            <strong>
              100
            </strong>
          </li>
          <li>
            <span>
              Listening since:
            </span>
            <strong>
              Mock date
            </strong>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="c-section__entry"
  >
    <div
      class="o-shell"
    >
      <div
        class="o-grid"
      >
        <div
          class="o-grid__item xs-12"
        >
          <h3>
            Top albums for last week:
          </h3>
          <div
            class="carousel"
          >
            <div
              class="carousel__container"
              style="transform: translateZ(857390066042756900px) rotateY(0deg);"
            >
              <div
                class="carousel__slide"
                style="opacity: 1; transform: rotateY(0deg) translateZ(-857390066042756900px);"
              >
                <img
                  alt="Test weekly album"
                  src="https://lastfm.freetls.fastly.net/i/u/174s/ade81b221def43c48ba7b364058c13c2.png"
                />
                <div
                  class="carousel__slide-overlay"
                >
                  <strong>
                    Test weekly album
                  </strong>
                  <span>
                    Test Artist
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="carousel__controls"
          >
            <button
              class="carousel__control carousel__control--prev"
            >
              Previous
            </button>
            <button
              class="carousel__control carousel__control--next"
            >
              Next
            </button>
          </div>
        </div>
        <div
          class="o-grid__item xs-12"
        >
          <h3>
            Top albums for last month:
          </h3>
          <div
            class="carousel"
          >
            <div
              class="carousel__container"
              style="transform: translateZ(NaNpx) rotateY(NaNdeg);"
            />
          </div>
          <div
            class="carousel__controls"
          >
            <button
              class="carousel__control carousel__control--prev"
            >
              Previous
            </button>
            <button
              class="carousel__control carousel__control--next"
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SocialMusic component Should unmount the SocialMusic component 1`] = `<DocumentFragment />`;

exports[`SocialMusic component Should unmount the SocialMusic component 2`] = `<DocumentFragment />`;

exports[`SocialMusic component Should unmount the SocialMusic component 3`] = `<DocumentFragment />`;

exports[`SocialMusic component Should unmount the SocialMusic component 4`] = `<DocumentFragment />`;
